# django-address

./: .gitignore  README.md  pyproject.toml  setup.py
address/: admin.py  models.py  widgets.py
address/fixtures/: models.json
address/migrations/: 0002_auto_20160213_1726.py  0004_add_municipality.py
address/static/address/js/: address.js
address/tests/: test_models.py
example_site/: README.md  pyproject.toml
example_site/example_site/: settings.py
example_site/person/: admin.py  forms.py  models.py
example_site/person/migrations/: 0001_initial.py  0002_auto_20200628_1720.py  0003_auto_20200628_1920.py
example_site/person/templates/example/: home.html
