[tool.poetry]
name = "django-address"
version = "0.2.8"
description = "A django application for describing addresses."
authors = ["Luke Hodkinson <furious.luke@gmail.com>"]
license = "BSD"
readme = "README.md"
homepage = "https://github.com/furious-luke/django-address"
repository = "https://github.com/furious-luke/django-address"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Framework :: Django",
    "Framework :: Django :: 3",
    "Framework :: Django :: 4",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10"
]
packages = [
    { include = "address" }
]
include = ["setup.cfg"]

[tool.poetry.dependencies]
python = ">=3.8,<4.0"
Django = ">=3.2"

[tool.poetry.dev-dependencies]
black = {version = ">=21.7b0", python = ">=3.6.2"}
flake8 = "^3.9.2"

[tool.poetry.group.dev.dependencies]
isort = "^5.10.1"

[tool.black]
line-length = 119

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
